--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 BOT_TOKEN=8383817248:AAG4wmusnwzczoo4Vlck93cmKKbj233NEcs
 ADMIN_CHAT_ID=6942175637
+DATABASE_URL=postgresql+psycopg2://postgres:tPPrbGMoyobbNSwUNlpOaxjwknsfToVx@interchange.proxy.rlwy.net:48183/railway
